--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Ubuntu:wght@400;700&display=swap');
+
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
 
 body {
 	font-family: 'Poppins', sans-serif;
 	position: relative;
 	height: 100vh;
+	overflow: hidden;
+	background-color: #c9d6df;
+}
+
+.split {
+   height: 100%;
+   width: 60%;
+   position: fixed;
+   z-index: 10;
+}
+
+.left {
+   left: 0;
+   background-color: #1e2022;
+   transition: linear 1.2s;
+}
+
+.right {
+   right: 0;
+   background-color: #1e2022;
+   transition: linear 1.2s;
 }
 
 .btn {
+	font-family: 'Ubuntu', sans-serif;	
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -200%);
+	padding: .65rem 2rem;
+	font-size: 1rem;
+	cursor: pointer;
+	background-color: #1e2022;
+	color: #f0f5f9;
+	border: none;
+	border-radius: 4px;
 }
