--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,9 @@
 
 body {
 	font-family: 'Poppins', sans-serif;
+}
+
+.container {
 	position: relative;
 	height: 100vh;
 	overflow: hidden;
@@ -16,7 +19,7 @@ body {
 
 .split {
    height: 100%;
-   width: 60%;
+   width: 50%;
    position: fixed;
    z-index: 10;
 }
