--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -22,7 +22,7 @@ body {
    width: 50%;
    position: fixed;
    z-index: 10;
-   transition: linear 1s;
+   transition: 1s;
    transition-property: left, right;
 }
 
@@ -37,7 +37,7 @@ body {
 }
 
 .box {
-   position: absolute;
+   position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -70%);
@@ -45,6 +45,7 @@ body {
    background-color: #f5f5f5;
    border-radius: 5px;
    overflow: hidden;
+   box-shadow: 2px 2px 10px rgba(100, 100, 100, 0.3);
 }
 
 .box .header {
