--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -22,7 +22,7 @@ body {
    width: 50%;
    position: fixed;
    z-index: 10;
-   transition: linear 1s;
+   transition: 1s;
    transition-property: left, right;
 }
 
