--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -37,10 +37,10 @@ body {
 }
 
 .box {
-   position: fixed;
-   top: 50%;
+   position: absolute;
    left: 50%;
-   transform: translate(-50%, -70%);
+   transform: translateX(-50%);
+   margin-top: 100px;
    width: 370px;
    background-color: #f5f5f5;
    border-radius: 5px;
