--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -50,3 +50,11 @@ body {
 	border: none;
 	border-radius: 4px;
 }
+
+.logout {
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+	font-size: 1.4rem;
+	cursor: pointer;
+}
