--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -53,8 +53,10 @@ body {
 
 .logout {
 	position: absolute;
-	bottom: 20px;
-	right: 20px;
-	font-size: 1.4rem;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding: 5px 30px;
+	font-size: 1rem;
 	cursor: pointer;
 }
