Revert "+ local storage"
This reverts commit 02a0feeab7ccf5e2b6de136b6914ccd1650da653.

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -53,10 +53,8 @@ body {
 
 .logout {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	padding: 5px 30px;
-	font-size: 1rem;
+	bottom: 20px;
+	right: 20px;
+	font-size: 1.4rem;
 	cursor: pointer;
 }
